# messenger-task

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO  crc4.cpp  crc4.hpp  messenger.cpp  messenger.hpp  messenger_test.cpp  msg_hdr.hpp  util.cpp  util.hpp
include/: messenger.hpp  msg_hdr.hpp
src/: CMakeLists.txt  messenger.cpp  util.cpp
test/: CMakeLists.txt  messenger_test.cpp  msg_hdr_test.cpp  test_util.cpp  test_util.hpp  util_test.cpp
